apps/gitops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: gitops.example.com  # e.g. app-name.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitops
                port:
                  number: 80
---
